# azure-token-helper

./: Dockerfile  README.md  app.json  app.py  config.py  create_credentials.azcli  pyproject.toml
.github/workflows/: publish.yml
