[tool.poetry]
name = "azure-token-helper"
version = "0.1.0"
description = "Helper to allow user_impersonation for azure apis."
authors = ["Welton Rodrigo Torres Nascimento"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.4"}
aiohttp = "^3.8.1"
azure-identity = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
